@@ -55,6 +55,7 @@ package org.apache.tools.ant.taskdefs.optional.ejb;
 
 import java.io.File;
 import java.util.Hashtable;
+import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 
 /**
@@ -63,12 +64,14 @@ import org.apache.tools.ant.Project;
  * compilation.
  *
  * @author <a href="mailto:p.austin@talk21.com">Paul Austin</a>
+ * @author <a href="mailto:rvanoo@xs4all.nl">Rob van Oostrum</a>
  * @version 1.0
  * @see EjbJar#createJboss
  */
 public class JbossDeploymentTool extends GenericDeploymentTool {
     protected static final String JBOSS_DD = "jboss.xml";
-    protected static final String JBOSS_CMPD = "jaws.xml";
+    protected static final String JBOSS_CMP10D = "jaws.xml";
+    protected static final String JBOSS_CMP20D = "jbosscmp-jdbc.xml";
 
     /** Instance variable that stores the suffix for the jboss jarfile. */
     private String jarSuffix = ".jar";
@@ -93,10 +96,17 @@ public class JbossDeploymentTool extends GenericDeploymentTool {
             log("Unable to locate jboss deployment descriptor. It was expected to be in " + jbossDD.getPath(), Project.MSG_WARN);
             return;
         }
-        
-        File jbossCMPD = new File(getConfig().descriptorDir, ddPrefix + JBOSS_CMPD);
+        String descriptorFileName = JBOSS_CMP10D;
+        if ( EjbJar.CMPVersion.CMP2_0.equals( getParent().getCmpversion() ) ) {
+            descriptorFileName = JBOSS_CMP20D;
+        }
+        File jbossCMPD = new File(getConfig().descriptorDir, ddPrefix + descriptorFileName);
+
         if (jbossCMPD.exists()) {
-            ejbFiles.put(META_DIR + JBOSS_CMPD, jbossCMPD);
+            ejbFiles.put(META_DIR + descriptorFileName, jbossCMPD);
+        } else {
+            log("Unable to locate jboss cmp descriptor. It was expected to be in " + jbossCMPD.getPath(), Project.MSG_WARN);
+            return;
         }
     }
 
@@ -105,6 +115,20 @@ public class JbossDeploymentTool extends GenericDeploymentTool {
      * of this jar will be checked against the dependent bean classes.
      */
     File getVendorOutputJarFile(String baseName) {
-        return new File(getDestDir(), baseName + jarSuffix);
+        return new File( getParent().getDestdir(), baseName + jarSuffix);
+    }
+
+    /**
+     * Called to validate that the tool parameters have been configured.
+     *
+     * @throws BuildException If the Deployment Tool's configuration isn't
+     *                        valid
+     * @since ant 1.6
+     */
+    public void validateConfigured() throws BuildException {
+    }
+
+    private EjbJar getParent() {
+        return ( EjbJar ) this.getTask();
     }
 }
